Added a window per station (who now have a name)

--- a/imgui.ini
+++ b/imgui.ini
@@ -8,3 +8,28 @@ Pos=60,60
 Size=66,54
 Collapsed=0
 
+[Window][Station]
+Pos=60,60
+Size=66,123
+Collapsed=0
+
+[Window][A]
+Pos=60,60
+Size=66,54
+Collapsed=0
+
+[Window][B]
+Pos=56,421
+Size=66,54
+Collapsed=0
+
+[Window][D]
+Pos=424,421
+Size=66,54
+Collapsed=0
+
+[Window][C]
+Pos=421,59
+Size=66,54
+Collapsed=0
+
