--- a/imgui.ini
+++ b/imgui.ini
@@ -23,3 +23,28 @@ Pos=155,178
 Size=235,77
 Collapsed=0
 
+[Window][Viau]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Assomption]
+Pos=145,94
+Size=235,77
+Collapsed=0
+
+[Window][Longueil-Universite-de-Sherbrooke]
+Pos=634,595
+Size=235,77
+Collapsed=0
+
+[Window][Henri-Bourassa]
+Pos=716,344
+Size=235,77
+Collapsed=0
+
+[Window][Jean-Drapeau]
+Pos=637,484
+Size=235,77
+Collapsed=0
+
