Added a main menu

--- a/imgui.ini
+++ b/imgui.ini
@@ -48,3 +48,48 @@ Pos=637,484
 Size=235,77
 Collapsed=0
 
+[Window][Guy-Concordia]
+Pos=398,35
+Size=235,77
+Collapsed=0
+
+[Window][Peel]
+Pos=5,181
+Size=235,77
+Collapsed=0
+
+[Window][Jarry]
+Pos=1061,113
+Size=235,77
+Collapsed=0
+
+[Window][Langelier]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Cadillac]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Game]
+Pos=60,60
+Size=94,54
+Collapsed=0
+
+[Window][Menu]
+Pos=221,77
+Size=94,55
+Collapsed=0
+
+[Window][Sauve]
+Pos=832,117
+Size=235,77
+Collapsed=1
+
+[Window][Pie-ix]
+Pos=845,291
+Size=235,77
+Collapsed=0
+
