--- a/imgui.ini
+++ b/imgui.ini
@@ -98,3 +98,258 @@ Pos=60,60
 Size=235,77
 Collapsed=0
 
+[Window][Cartier]
+Pos=-50,157
+Size=235,77
+Collapsed=0
+
+[Window][De la concorde]
+Pos=-60,176
+Size=235,77
+Collapsed=0
+
+[Window][MontMorency]
+Pos=-85,133
+Size=235,77
+Collapsed=0
+
+[Window][Cremazie]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Jean-Talon]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Fabre]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Saint Michel]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Beaubien]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Rosemont]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Laurier]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Mont-Royal]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Sherbrooke]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Berri-UQAM]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Beaudry]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Frontenac]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Prefontaine]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Joliette]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Radisson]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Honore-Beaugrand]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Saint-Laurent]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Champ-de-Mars]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Place-des-arts]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Place-D'armes]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][McGill]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Square-Victoria-OACl]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Lucien-L'allier]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Atwater]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Georges-Vanier]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Lionel-Groulx]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Charlevoix]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Lasalle]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][De l'eglise]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Verdun]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Jolicoeur]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Monk]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Angrignon]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Place-Saint-Henri]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Villa-Maria]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Snowdon]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Cote des neiges]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Universite de Montreal]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Edouard-Montpettit]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Outremont]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Acadie]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Parc]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Cote-Sainte-Catherine]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Plamondon]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Namur]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][De la Savanne]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Du College]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
+[Window][Cote-Vertu]
+Pos=60,60
+Size=235,77
+Collapsed=0
+
